.provarCaches/00D5f000005vwGkEAI/objects/rstkf__customextf__c.object
<CustomObject>
    <fields>
        <fullName>rstkf__atb_exportreportinprintformat__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>See Export Report in Print Format and Export in Extended Spreadsheet Format in the Key Data Elements section of the page help.</inlineHelpText>
        <label>Export Report in Print Format</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_homecurrencyonly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home Currency Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_includeallglaccounts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>atb_includeallglaccounts__c</description>
        <inlineHelpText>See Include All AP Control Accounts and Select GL Control Accounts to be Printed in the Key Data Elements section of the page help.</inlineHelpText>
        <label>Include All AP Control Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_includeitemsinopenbatch__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>See Include Items in Open (Unposted) Sessions in the Key Data Elements section of the page help.</inlineHelpText>
        <label>Include Items in Open (Unposted) Session</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_includeoneglcontrolaccountonly__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>See Include All AP Control Accounts and Select GL Control Accounts to be Printed in the Key Data Elements section of the page help.</inlineHelpText>
        <label>Select GL Control Accounts to be Printed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_includeunagedopenamountcolumn__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>See Include an Un-Aged &apos;Open Amount&apos; Column in the Key Data Elements section of the page help.</inlineHelpText>
        <label>Include an Un-Aged &apos;Open Amount&apos; Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_noofdaysafterpaymentdate__c</fullName>
        <inlineHelpText>See Days Between Pay Runs in the Key Data Elements section of the page help.</inlineHelpText>
        <label>Days Between Pay Runs</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_noofdaysafterpayrun__c</fullName>
        <inlineHelpText>See Days Before Vendor Receives Payment in the Key Data Elements section of the page help.</inlineHelpText>
        <label>Days Before Vendor Receives Payment</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_nooffuturecolumns__c</fullName>
        <inlineHelpText>This prompt appears only if Export in Extended Spreadsheet Format and Use Forward Aging are checked. The allowable range is from one to 29.</inlineHelpText>
        <label># of Future Columns</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_noofpastcolumns__c</fullName>
        <inlineHelpText>This prompt appears only if Export in Extended Spreadsheet Format and Use Backward Aging are checked. The allowable range is from one to 29</inlineHelpText>
        <label># of Past Columns</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_printdocumentinrefcolumn__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>See Print Document # in Reference Column and Print Transaction # in Reference Column in the Key Data Elements section of the page help.</inlineHelpText>
        <label>Print Document # in Reference Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_printreport__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>See Print Report and Export Report as Spreadsheet in the Key Data Elements section of the page help.</inlineHelpText>
        <label>Print Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_printtransactioninrefcolumn__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>See Print Document # in Reference Column and Print Transaction # in Reference Column in the Key Data Elements section of the page help.</inlineHelpText>
        <label>Print Transaction # in Reference Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_printvendorabovecolumnheadings__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>See Print Vendor Line Above Column Headings in the Key Data Elements section of the page help.</inlineHelpText>
        <label>Print Vendor Line Above Column Headings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_selectedglcontrolaccount__c</fullName>
        <inlineHelpText>This prompt appears only if Select GL Control Accounts to be Printed is checked. It is the only AP control account to appear on the report.</inlineHelpText>
        <label>Select GL Control Account</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_separatediscountline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Separate Discount Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_totalhelditemsseparately__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>See Total Held Items Separately in the Key Data Elements section of the page help.</inlineHelpText>
        <label>Total Held Items Separately</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_transcutoffdate__c</fullName>
        <description>atb_transcutoffdate__c</description>
        <inlineHelpText>Transaction cut-off / payment date.  See As-of Date and Aging Date in the Key Data Elements section of the page help.</inlineHelpText>
        <label>As-Of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_usebackwardaging__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>See Use Forward Aging and Use Backward Aging in the Key Data Elements section of the page help.</inlineHelpText>
        <label>Use Backward Aging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__atb_useforwardaging__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>See Use Forward Aging and Use Backward Aging in the Key Data Elements section of the page help.</inlineHelpText>
        <label>Use Forward Aging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__bankacc_glacct__c</fullName>
        <description>Bank Account</description>
        <inlineHelpText>Bank Account</inlineHelpText>
        <label>Bank Account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__bankcard_fromdate__c</fullName>
        <description>From Date</description>
        <inlineHelpText>From Date</inlineHelpText>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__bankcard_thrudate__c</fullName>
        <description>Thru Date</description>
        <inlineHelpText>Thru Date</inlineHelpText>
        <label>Thru Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__bankcardtxn_bankacc__c</fullName>
        <description>Bank Card Account Number</description>
        <inlineHelpText>Bank Card Account Number</inlineHelpText>
        <label>Bank Card Account Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__bnkacc_paypend__c</fullName>
        <description>Settlement Pending</description>
        <inlineHelpText>This is the value of settlement amount/s raised, but not yet paid.</inlineHelpText>
        <label>Settlement Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__br2_bankstmtamt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total bank statement amount</inlineHelpText>
        <label>Bank Statement Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__br2_sysamt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total system amount</inlineHelpText>
        <label>System Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__br2_unmatchedamt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total unmatched amount</inlineHelpText>
        <label>Unmatched Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__buildplrate_accountnumber__c</fullName>
        <label>Enter Account #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__buildplrate_effectiveperiod__c</fullName>
        <inlineHelpText>Applicable Period for GL Year</inlineHelpText>
        <label>Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__buildplrate_effectiveyear__c</fullName>
        <inlineHelpText>Applicable GL Year</inlineHelpText>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__buildplrate_fromaccountno__c</fullName>
        <label>From Account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__buildplrate_fromdate__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__buildplrate_fromperiod__c</fullName>
        <label>From Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__buildplrate_periodordate__c</fullName>
        <label>Period or by Date</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>By period</fullName>
                </value>
                <value>
                    <fullName>By date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__buildplrate_ratetype__c</fullName>
        <label>Exchange Rate Override Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Spot</fullName>
                </value>
                <value>
                    <fullName>Override</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__buildplrate_singleaccorrange__c</fullName>
        <label>One Account or a Range of Accounts</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__buildplrate_spotratesource__c</fullName>
        <label>Source of exchange rate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Daily Rate</fullName>
                </value>
                <value>
                    <fullName>Balance Sheet Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__buildplrate_toaccountno__c</fullName>
        <label>Through Account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__buildplrate_todate__c</fullName>
        <label>Through date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__buildplrate_toperiod__c</fullName>
        <label>Through period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__buildplrate_typeofspotratepolicy__c</fullName>
        <label>Exchange Rate Assignment Rule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Daily Rates</fullName>
                </value>
                <value>
                    <fullName>Balance Sheet Rates</fullName>
                </value>
                <value>
                    <fullName>Daily First,Then Balance Sheet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_arapplic_effectonbal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Effect on Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_arapplic_endingbalhome__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Post-Discn&apos;t Balance - Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_arapplic_endingbalmaint__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Post-Discount Balance - Txn Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_arapplic_newdiscnttknhome__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Discount Taken - Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_arapplic_newdiscnttknmaint__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Discount Taken - Txn Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_arapplic_postapplicbalhome__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Post-Application Balance - Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_arapplic_postapplicbalmaint__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Post-Application Balance - Txn Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_arapplic_prediscbalhome__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Pre-Discount Balance - Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_arapplic_prediscbalmaint__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Pre-Discount Balance - Txn Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_arapplic_runningbal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Running Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_aritem_allowableDisMaint__c</fullName>
        <label>Discn&apos;t Offered In Txn Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_aritem_allowableDiscDate__c</fullName>
        <label>Discn&apos;t Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_aritem_amtAppliedARCurr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amt Applied in Txn Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_aritem_applicationType__c</fullName>
        <label>Application Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_aritem_balRemainingARCurr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Bal Remaining in Txn Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_aritem_discntAmtARCurr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount Taken in AR Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_aritem_payment__c</fullName>
        <label>Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_aritem_suggestedApplied__c</fullName>
        <label>Suggested / Applied</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_bankglcash__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cash to GL Amount - Bank Curr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_crossSO__c</fullName>
        <label>Ok to cross sales order</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Look within order, then cross</fullName>
                    <label>Look Within Order, Then Cross</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_crosscurrs__c</fullName>
        <label>Ok to Cross Currencies?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Look within currency, then cross</fullName>
                    <label>Look Within Currency, Then Cross</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_crossdiv__c</fullName>
        <label>Ok to Cross Divisions?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Look within division, then cross</fullName>
                    <label>Look Within Division, Then Cross</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_crossprojects__c</fullName>
        <label>Ok to Cross Projects?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Look within project, then cross</fullName>
                    <label>Look Within Project, Then Cross</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_glcashcracct__c</fullName>
        <label>Cash to GL - Account Cr</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_glcashcracctdesc__c</fullName>
        <label>Cash to GL - Account Cr - Desc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_homeglcash__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cash to GL Amount - Home Curr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_invcust__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>customextf (Invoice Customer)</relationshipLabel>
        <relationshipName>customextf</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_netcashpay__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Net Total Applied - Payment Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_nodivisanydiv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unspecified Div Counts as Any Div?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_noprojisanyproj__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unspecified Proj Counts as Any Proj?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_nosoisanyso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unspecified SO Counts as Any SO?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_stillunapplied__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Still Unapplied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreceipts_trialpayapplied__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Trial Application</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreqreport_amtnotselected__c</fullName>
        <label>Amount Not Selected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreqreport_disctknamt__c</fullName>
        <label>Discount Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashreqreport_netpay__c</fullName>
        <label>Net Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashtogl_cashamt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cash to GL Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__cashtogl_trandate__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__chkregistersinglepayment_fromBatchNo__c</fullName>
        <label>From Session Number Single Payment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__chkregistersinglepayment_reportType__c</fullName>
        <description>Report Type</description>
        <label>Report Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__cr_frmtxndate__c</fullName>
        <description>cr_frmtxndate__c</description>
        <label>From Txn Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__cr_fromdocnums__c</fullName>
        <description>cr_fromdocnums__c</description>
        <label>From Document Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__cr_thrudocnums__c</fullName>
        <description>cr_thrudocnums__c</description>
        <label>Thru Document Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__cr_thrutxndate__c</fullName>
        <description>cr_thrutxndate__c</description>
        <label>Thru Txn Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__createdebitmemo_statementdate__c</fullName>
        <label>Statement Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__crj_frombatchdate__c</fullName>
        <inlineHelpText>To further restrict query, enter the earliest session date to be included</inlineHelpText>
        <label>From Session Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__crj_includecashreceiptsbatches__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, Cash Receipt sessions will be included in query</inlineHelpText>
        <label>Include Cash Receipt Sessions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__crj_includeincompletebatches__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, in-process sessions will be included in query</inlineHelpText>
        <label>Include Incomplete Sessions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__crj_includenoncashtransferbatches__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, Non-Cash Transfer sessions will be included in query</inlineHelpText>
        <label>Include Non-Cash Transfer Sessions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__crj_includenonpostingtransactions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, Non-Posting transactions (those with no GL impact) will be included in query</inlineHelpText>
        <label>Include Non-Posting Transactions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__crj_includepostedbatches__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, posted sessions will be included in query</inlineHelpText>
        <label>Include Posted Sessions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__crj_includeunpostbatches__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, unposted sessions will be included in query</inlineHelpText>
        <label>Include Unposted Sessions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__crj_postunpostedbatchesafterreport__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, if query includes unposted sessions, those sessions will be attempted to be closed programatically upon clicking &apos;Execute&apos;</inlineHelpText>
        <label>Post Unposted Sessions After Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__crj_queryindividualbatches__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the &quot;select&quot; checkboxes at far left of rows returned from query are activated and can be selected individually.</inlineHelpText>
        <label>Query Individual Sessions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__crj_throughbatchdate__c</fullName>
        <inlineHelpText>To further restrict query, enter the latest session date to be included</inlineHelpText>
        <label>Through Session Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__crjournal_date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__cronExpression__c</fullName>
        <description>cronExpression</description>
        <label>Cron Expression</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__custom_glcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>custom_glcmp__c</description>
        <inlineHelpText>Company for which this record pertains</inlineHelpText>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>customextf</relationshipLabel>
        <relationshipName>customextf</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__customext_date1__c</fullName>
        <description>Can be used for any custom date field</description>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__customext_date2__c</fullName>
        <label>From Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__customext_date3__c</fullName>
        <label>Through Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__deposit_date__c</fullName>
        <description>Deposit Date</description>
        <label>Deposit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__depriciationDate__c</fullName>
        <description>depriciationDate</description>
        <label>Depriciation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__exchange_rate__c</fullName>
        <description>Exchange Rate</description>
        <label>Exchange Rate</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__exchange_rate_schedule__c</fullName>
        <description>Type of Exchange Rate Schedule</description>
        <label>Type of Exchange Rate Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Locked-In Commitment Rate</fullName>
                </value>
                <value>
                    <fullName>Override Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__finreportmover_copyreportaccgrphead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, we will copy GLFSTMPLT7 records</description>
        <inlineHelpText>If true, we will copy GLFSTMPLT7 records</inlineHelpText>
        <label>Copy Report Account Group Headers?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__finreportmover_copyreportaccgrplines__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, we will copy GLFSTMPLT8 records.</description>
        <inlineHelpText>If true, we will copy GLFSTMPLT8 records.</inlineHelpText>
        <label>Copy Report Account Group Lines?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__finreportmover_copysublines__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy Sublines?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__finreportmover_destglcmp__c</fullName>
        <description>Record name field of GLCMP in destination org.</description>
        <inlineHelpText>Record name field of GLCMP in destination org.</inlineHelpText>
        <label>Destination Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__finreportmover_glcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>customextf (Company)</relationshipLabel>
        <relationshipName>finreportmovers01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__finreportmover_isdestnsndbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select if destination org is a sandbox.</description>
        <label>Destination Org is a Sandbox?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__finreportmover_password__c</fullName>
        <inlineHelpText>Please enter password and security token for the organisation where template to be imported.</inlineHelpText>
        <label>Password for the Org</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__finreportmover_templateheader__c</fullName>
        <label>Template Header</label>
        <length>30</length>
        <type>Text</type>
    </fields>
</CustomObject>